--- a/Football-House/css/styles.css
+++ b/Football-House/css/styles.css
@@ -30,8 +30,6 @@ nav {
 }
 #logo {
   display: flex;
-  justify-content: center;
-  align-content: center;
 }
 .logo {
   padding: 10px;
@@ -42,23 +40,13 @@ nav {
   width: 70px;
 }
 #humberger,
-.cancel {
+#cancel {
   cursor: pointer;
   font-size: 2.25rem;
   color: white;
   margin: 10px;
-}
-.cancel,
-#humberger {
   display: none;
 }
-nav .hide {
-  display: none !important;
-}
-nav .show {
-  display: block !important;
-}
-
 /*********************************************************************/
 .main-events {
   background-image: linear-gradient(to right, #62104a, #220b1b);
@@ -75,7 +63,6 @@ nav .show {
   flex-direction: column;
 }
 #heading {
-  padding-top: 20%;
   color: white;
 }
 .time {
@@ -112,7 +99,7 @@ nav .show {
 /**************************************************************/
 .vote-main {
   display: flex;
-  height: 90%;
+  height: 100%;
   width: 100%;
   position: relative;
 }
@@ -173,7 +160,7 @@ nav .show {
 }
 /***************************************************************/
 .main-news {
-  padding-top: 10%;
+  padding-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -237,15 +224,16 @@ nav .show {
     flex: 1 1;
     padding: 50px;
   }
-}
-@media screen and (max-width: 1000px) {
-  .DIVone {
-    height: 100vh;
-    width: 97vw;
+  #heading {
+    padding-top: 20%;
   }
-  .DIVtwo {
-    height: 100vh;
-    width: 97vw;
+}
+@media screen and (max-width: 600px) {
+  .time {
+    flex-direction: column;
+  }
+  .time div {
+    width: 250px;
   }
 }
 @media screen and (min-width: 1136px) {
@@ -280,16 +268,19 @@ nav .show {
     cursor: pointer;
     text-align: center;
   }
-
   .sign-in {
     background-color: rgb(0, 110, 255);
     color: white;
     margin-left: 5px;
+    text-decoration: none;
+    padding: 10px 0;
   }
   .sign-up {
     color: indigo;
     background-color: white;
     margin-left: 5px;
+    text-decoration: none;
+    padding: 10px 0;
   }
   #form2 {
     display: none;
@@ -297,8 +288,16 @@ nav .show {
   .buttons2 {
     display: none;
   }
+  #cancel,
+  #humberger {
+    display: none !important;
+  }
 }
 @media screen and (max-width: 1135px) {
+  nav {
+    position: fixed;
+    z-index: 100;
+  }
   .items {
     position: fixed;
     display: inline-block;
@@ -387,10 +386,10 @@ nav .show {
     background-color: white;
   }
   #logo {
-    position: absolute;
-    left: 50%;
-    top: 6%;
     transform: translate(-50%, -50%);
+    position: absolute;
+    top: 65%;
+    left: 50%;
   }
   nav .active {
     left: 0%;
@@ -403,6 +402,12 @@ nav .show {
   }
   #humberger {
     display: inline-block;
+  }
+  #heading {
+    margin-bottom: 10px;
+  }
+  .DIVone {
+    padding-top: 10%;
   }
 }
 @media screen and (min-width: 451px) {
